correct index.html for validation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div>New arrivals!</div>        
         <div>
             <img src="img/bag-photo.webp" alt="bag image">
+        </div>
         <div>
             <img src="img/3_man.webp" alt="A man with the Canvas BackPack" >
             <img src="img/4_man.webp" alt="A man with the Duffle Bags">
@@ -50,7 +51,7 @@
         <!-- Form and contsct info block start-->
         <div>
             <div>
-                <form action="" method="post">
+                <form method="post">
                     <label for="name">
                         
                             Enter Your Name
