--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
         </div>
         <div>
             <div>
-                <h2>NOW ON SALE</h2>
-                <h3>UP TO 50% OFF</h3>
+                <p>NOW ON SALE</p>
+                <p>UP TO 50% OFF</p>
             </div>
             <div>
                 <div>
                     <img src="img/6_canvasbackpack.webp" alt="A Canvas backpack">
-                    <h4>Canvas backpack</h4>
+                    <p>Canvas backpack</p>
                 </div>
                 <div>
                     <img src="img/7_technicalpack.webp" alt="A technical pack">
-                    <h4>Technical pack</h4>
+                    <p>Technical pack</p>
                 </div>
                 <div>
                     <img src="img/8_travelpack.webp" alt="A travel pack">
-                    <h4>Travel pack</h4>
+                    <p>Travel pack</p>
                 </div>
             </div>
         </div>
         <div>
             <div><img src="img/9_traveler.webp" alt="A traveler"></div>
             <div>
-                <h2>ABOUT US</h2>
-                <h3>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.</h3>
+                <p>ABOUT US</p>
+                <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.</p>
             </div>
         </div>
         <!-- Form and contsct info block start-->
@@ -68,28 +68,26 @@
                 </form>
             </div>
             <div>
-                <h3>CONTACT</h3>
-                <h4>
-                    Somethnig about us
-                </h4>
+                <p>CONTACT</p>
+                <p>Somethnig about us</p>
             </div>
         </div>
         <!-- Form and contsct info block end-->
         <!-- Subscription block start-->
         <div>
-            <h1>JOIN OUR MAILING LIST</h1>    
-            <h3>AND NEVER MISS AN UPDATE</h3>
-            <h5>Enter your email here</h5>
+            <p>JOIN OUR MAILING LIST</p>
+            <p>AND NEVER MISS AN UPDATE</p>
+            <p>Enter your email here</p>
             <input type="email" placeholder="Email" required>
             <button type="submit">SUBSCRIBE NOW</button>
         </div>
         <!-- Subscription block end-->
     </main>
     <footer>
-        <small>© 2023 by NORTHPOLE. Proudly created by Me</small> 
-        <small>FAQ</small>
-        <small>Shipping & Returns</small>
-        <small>Terms & Conditions</small>
+        <p>© 2023 by NORTHPOLE. Proudly created by Me</p>
+        <p>FAQ</p>
+        <p>Shipping & Returns</p>
+        <p>Terms & Conditions</p>
     </footer>
 </body>
 </html>
